Fixed layout bug on carousel section

--- a/src/assets/sass/_cards.scss
+++ b/src/assets/sass/_cards.scss
@@ -6,7 +6,7 @@
 
   @include desktop {
     @include display-flex-between();
-    margin-bottom: 60px;
+    margin-bottom: 0;
     margin-top: 60px;
   }
 
